[package]
name = "http-tonnel-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-native-tls = "0.3"
native-tls = "0.2"
clap = { version = "3.1.6", features = ["derive"] }
regex = "1.3"
rand = "0.8"
yaml-rust = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.9.4"
serde_json = "1.0"
serde_regex = "1.1"
humantime-serde = "1.0"
async-trait = "0.1"
strum = "0.24.1"
strum_macros = "0.24.2"
derive_builder = "0.11.2"
log = "0.4"
log4rs = "1.0.0-alpha-1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["full"] }
bytes = "1"
futures = "0.3"
time = "0.3.12"